--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <div class="modal">
               <div class="modal-content">
               <p class="modal-title">Zostaw swoje dane w formularzu poniżej</p>
+              <form>
               <fieldset class="fieldset">
                 <label class="label">Imię</label>
                 <svg class="modal-icons">
@@ -93,17 +94,19 @@
                 </svg>
                 <input class="input-content"  type="email" name="email"/>
               </fieldset>
-              <fieldset class="fieldset">
+              <fieldset class="last-fieldset">
                 <label class="label">Komentarz</label>
-                <textarea class="input-content"  type="textarea" rows="7" name="text" placeholder="Wprowadź tekst"/>
+                <textarea class="input-content"  rows="4" name="text" placeholder="Wprowadź tekst"></textarea>
               </fieldset>
+              <input class="checkbox" type="checkbox" name="Terms" required/>
                 <label class="label-terms">Oświadczam iż akceptuję <a class="terms" href="#">Regulamin</a> i <a class="terms" href="#">Politykę Prywatności.</a> </label>
-                <input type="checkbox" name="Terms" required/>
-                <div class="button-place">
+                
+                <div class="button-place button-margin">
                   <button type="button" class="button-order">
                     <span>Wyślij</span>
                   </button>
             </div>
+          </form>
               <div class="border-close-button">
             <button class="close-button center-content" data-modal-close>
               <svg class="close-button-icon"               width="18"
