--- a/index.html
+++ b/index.html
@@ -100,11 +100,14 @@
               </fieldset>
 
               <!-- jak to zrobićććć?????/ -->
-              <label class="label-terms">Oświadczam iż akceptuję <span class="terms" href="#">Regulamin</span> i <span class="terms" href="#">Politykę Prywatności.</span> </label>
               <input class="checkbox" type="checkbox" name="Terms" required unchecked/>
-                <svg class="checkbox-icon">
-                  <use xlink href="./images/icons.svg#icon-checkbox"></use>
-                </svg>
+              <span class="checkbox-layout">
+              <svg class="checkbox-icon">
+                <use xlink href="./images/icons.svg#icon-checkbox"></use>
+              </svg>
+            </span>
+              <label class="label-terms">Oświadczam iż akceptuję <span class="terms" href="#">Regulamin</span> i <span class="terms" href="#">Politykę Prywatności.</span> </label>
+ 
               
                 
                 <div class="button-place button-margin">
