--- a/index.html
+++ b/index.html
@@ -99,9 +99,10 @@
                 <textarea class="input-content"  rows="4" name="text" placeholder="Wprowadź tekst"></textarea>
               </fieldset>
 
-              <!-- jak to zrobićććć?????/ -->
-              <input class="checkbox" type="checkbox" name="Terms" required unchecked/>
-              <span class="checkbox-layout">
+
+              <label class="checkbox"></label>
+              <input class="checkbox-input" type="checkbox" name="Terms" required unchecked/>
+              <span class="checkbox-svg">
               <svg class="checkbox-icon">
                 <use xlink href="./images/icons.svg#icon-checkbox"></use>
               </svg>
@@ -465,8 +466,9 @@
                   <svg class="subscription-icon">
                     <use xlink href="./images/icons.svg#send-icon"></use>
                   </svg></span>
-                </div>
                 </button>
+              </div>
+              </div>
             </form>
     </footer>
     <script src="./js/modal.js"></script>
