--- a/portfolio.html
+++ b/portfolio.html
@@ -294,6 +294,22 @@
             </li>
           </ul>
         </div>
+          <form class="subscription">
+            <label class="subscription-header">ZAPISZ SIĘ DO NEWSLETTERA
+              </label>
+              <div class="subscription-form">
+              <input class="subscription-input" type="email" name="newsletter-email" placeholder="E-mail" />
+              <div class="button-place">
+                <button type="submit" class="subscription-button">
+                  <span class="subscription-button-text">Zapisz się
+                  <svg class="subscription-icon">
+                    <use xlink href="./images/icons.svg#send-icon"></use>
+                  </svg></span>
+                </button>
+              </div>
+              </div>
+            </form>
     </footer>
+    <script src="./js/modal.js"></script>
   </body>
 </html>
