--- a/index.html
+++ b/index.html
@@ -100,13 +100,13 @@
               </fieldset>
 
 
-              <label class="checkbox"></label>
-              <input class="checkbox-input" type="checkbox" name="Terms" required unchecked/>
-              <span class="checkbox-svg">
-              <svg class="checkbox-icon">
-                <use xlink href="./images/icons.svg#icon-checkbox"></use>
-              </svg>
-            </span>
+              <label class="checkbox"><input class="checkbox-input" type="checkbox" name="Terms" required unchecked/>
+                <span class="checkbox-svg">
+                <svg class="checkbox-icon">
+                  <use xlink href="./images/icons.svg#icon-checkbox"></use>
+                </svg>
+              </span></label>
+              
               <label class="label-terms">Oświadczam iż akceptuję <span class="terms" href="#">Regulamin</span> i <span class="terms" href="#">Politykę Prywatności.</span> </label>
  
               
