--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
     <header>
       <div class="container">
         <menu>
-          <a href="index.html" class="main-header">
-            <span class="Webstudio-header-blue hover">Web</span
-            ><span class="Webstudio-header hover">Studio</span>
+          <a href="index.html" class="page-name">
+            <span class="page-name__title page-name__title--blue hover">Web</span
+            ><span class="page-name__title page-name__title--black hover">Studio</span>
           </a>
           <ul class="header-list1">
             <li>
